[package]
name = "actr-pack"
version = "0.4.10"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "ACTR package format: ZIP STORE-based .actr file reading, writing, signing and verification"

[lints]
workspace = true

[dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2.workspace = true
ed25519-dalek.workspace = true
toml.workspace = true
serde = { version = "1.0", features = ["derive"] }
base64.workspace = true
hex = "0.4"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
