[package]
name = "actr-protocol"
version = "0.5.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Unified protocol, types, and URI parsing for Actor-RTC framework"
repository = "https://github.com/Actrium/actr"
keywords = ["actor", "protobuf", "types", "protocol", "uri"]
readme = "README.md"

[features]
default = []
uniffi = ["dep:uniffi"]

[lints]
workspace = true

[dependencies]
# Protocol buffer support (using prost with proto2)
prost = "0.14.1"
prost-types = "0.14.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

# Error handling
thiserror.workspace = true
anyhow = { workspace = true }

# Bytes handling (zero-copy for protobuf bytes fields)
bytes = "1.10"

# Time and UUID for signaling protocol
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["serde"] }

# UniFFI for cross-language bindings
uniffi = { version = "0.30.0", optional = true }

[build-dependencies]
# Protocol buffer compilation (using prost-build)
prost-build = "0.14.1"
glob = "0.3"
uniffi = "0.30.0"
