[package]
name = "actr-mock-actrix"
version = "0.4.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Mock actrix server (WS signaling + HTTP AIS + MFR registry) for Actor-RTC integration tests"

[[bin]]
name = "mock-actrix"
path = "src/bin/mock_actrix.rs"

[dependencies]
actr-protocol = { workspace = true }

tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }

# HTTP + WebSocket server (axum handles same-port WS upgrade + REST routes)
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = "0.4"

# CLI binary argument parsing
clap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }

[lints]
workspace = true
