[package]
name = "actrix"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WebRTC 辅助服务器集合，包括信令服务、STUN 和 TURN 服务"

[features]
default = ["admin-ui"]
admin-ui = ["dep:rust-embed"]
opentelemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-jaeger",
    "dep:tracing-opentelemetry",
    "platform/opentelemetry",
    "signaling/opentelemetry",
]

[dependencies]
uuid = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "json",
    "registry",
    "time",
] }
tracing-appender = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum.workspace = true
tower-http = { version = "0.5", features = ["trace", "cors"] }
tower-service = "0.3"
# Rustls related dependencies
rustls = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = "1.0.1"

# Axum related
tokio-util = { version = "0.7.13", features = ["io"] }
axum-server = { version = "0.7.3", default-features = false, features = [
    "tls-rustls",
] }

# Local dependencies
actrix-sdk = { path = "../sdk" }
platform = { path = "../platform", package = "actrix-platform" }
signaling = { path = "../signaling", package = "actrix-signaling" }
stun = { path = "../stun", package = "actrix-stun" }
turn = { path = "../turn", package = "actrix-turn" }
ais = { path = "../ais", package = "actrix-ais" }
actrix-mfr = { path = "../mfr" }
signer = { path = "../signer", package = "actrix-signer" }
rand = "0.9.1"
futures = "0.3.31"
num_cpus = "1.16.0"
core_affinity = "0.8.3"
once_cell = "1.21.3"
url = "2.5.4"
tokio-tungstenite = { workspace = true }
hostname = "0.4.0"
base64 = { workspace = true }
hex = { workspace = true }
async-trait = "0.1.88"
strum = { version = "0.26", features = ["derive"] }
toml = { version = "0.8" }
nonce-auth = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
ecies = { workspace = true }
reqwest = { workspace = true }
typetag = "0.2.20"
pwrzv = { version = "0.7.0" }
tonic = { workspace = true }
prometheus = "0.14"
lazy_static = "1.4"
jsonwebtoken = "9"
subtle = "2"
rust-embed = { version = "8", features = ["mime-guess", "debug-embed"], optional = true }
sqlx = { workspace = true, default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }

# OpenTelemetry dependencies (optional, enabled by feature)
opentelemetry = { version = "0.31.0", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "http-proto"], optional = true }
opentelemetry-jaeger = { version = "0.22", optional = true }
tracing-opentelemetry = { version = "0.32.0", optional = true }

# Unix specific dependencies for privilege dropping
[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["user"] }

[dev-dependencies]
actrix-sdk = { path = "../sdk", features = ["testing"] }
platform = { path = "../platform", package = "actrix-platform" }
tempfile = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
urlencoding = "2.1"
base64 = { workspace = true }
libc = "0.2"
actr-protocol = { workspace = true }
actr-runtime = { workspace = true }
actr-runtime-mailbox = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serial_test = "3.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
opentelemetry-proto = { version = "0.31.0", default-features = false, features = ["gen-tonic", "trace"] }

[lints]
workspace = true
