[package]
name = "ais"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Actor Identity Service (AIS) - ActrId registration and credential issuing"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }

## Actor-RTC framework dependencies
actr-protocol = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

## Crypto dependencies
ecies = { workspace = true }

## Database
sqlx = { workspace = true, default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }

## Utilities
base64 = { workspace = true }
rand = "0.8.5"

## Rate limiting
tower_governor = "0.8"
tower = "0.5"
governor = "0.10"


# Internal dependencies
actrix-common = { path = "../common" }
ks = { path = "../ks" }

[dev-dependencies]
tempfile = { workspace = true }
nonce-auth = { workspace = true }
tonic = { workspace = true }
