[package]
name = "actrix-common"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Actrix 项目的通用基础设施组件"
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
rand = "0.8.5"
ecies = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
url = { version = "2", features = ["serde"] }
actr-protocol = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
pwrzv = { workspace = true }
nonce-auth = { workspace = true }
async-trait = "0.1"
sqlx = { workspace = true }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
once_cell = "1.19"
ks = { path = "../ks" }
prometheus = "0.13"
lazy_static = "1.4"
actrix-proto = { path = "../actrix-proto" }
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
serial_test = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
