[package]
name = "ks"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Key Server (KS) - 椭圆曲线密钥生成和管理服务"
license.workspace = true
rust-version.workspace = true

[features]
default = ["backend-sqlite"]
backend-sqlite = ["sqlx"]                                             # SQLite 使用 sqlx
backend-postgres = ["sqlx"]
backend-all = ["backend-sqlite", "backend-postgres"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# gRPC dependencies
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio-stream = "0.1.17"

# Crypto dependencies
ecies = { workspace = true }
base64 = { workspace = true }
aes-gcm = "0.10"              # AES-256-GCM for KEK encryption

# Storage backends
# SQLite and PostgreSQL - 使用 sqlx 统一异步接口
sqlx = { workspace = true, default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "postgres",
    "macros",
], optional = true }

# HTTP client for testing
reqwest = { workspace = true }

# Authentication and security
nonce-auth = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }

# Utilities
rand = "0.8.5"
hex = { workspace = true }
async-trait = "0.1"

# Internal dependencies
actrix-proto = { path = "../actrix-proto" }
# Note: circular dependency avoided - base depends on ks for client types

# Monitoring
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
tower = "0.5"
hyper = "1.0"
tempfile = { workspace = true }
toml = { workspace = true }
