[package]
name = "actrix-platform"
version.workspace = true
publish = false
edition.workspace = true
repository.workspace = true
description = "Actrix platform core infrastructure components"
license.workspace = true
rust-version.workspace = true

[features]
default = []
opentelemetry = ["dep:opentelemetry", "dep:tracing-opentelemetry"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
opentelemetry = { version = "0.31.0", features = ["trace"], optional = true }
tracing-opentelemetry = { version = "0.32.0", optional = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
rand = "0.8.5"
ecies = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
url = { version = "2", features = ["serde"] }
actr-protocol = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
pwrzv = { version = "0.7.0" }
nonce-auth = { workspace = true }
async-trait = "0.1"
ed25519-dalek = "2"
sqlx = { workspace = true }
tokio-tungstenite = { workspace = true }
toml = { version = "0.8" }
once_cell = "1.19"
signer = { path = "../signer", package = "actrix-signer" }
prometheus = "0.14"
lazy_static = "1.4"
actrix-proto = { path = "../contracts" }
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
serial_test = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
name = "platform"

[lints]
workspace = true
