[package]
name = "signaling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "WebRTC信令服务实现，作为aux-servers的组件"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
opentelemetry = ["dep:opentelemetry", "dep:tracing-opentelemetry"]

[dependencies]
tokio = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
bytes = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }

# WebSocket implementation
axum = { workspace = true, features = ["ws"] }

# Actor-RTC Protocol
actr-protocol = { workspace = true }
actr-version = { workspace = true }

# Protobuf
prost = { workspace = true }
prost-types = { workspace = true }
base64 = { workspace = true }

# 内部依赖
actrix-common = { path = "../common" }

# HTTP client for AIS
reqwest = { workspace = true }

# Database
sqlx = { workspace = true }

# Rate limiting
governor = "0.10"

# OpenTelemetry (W3C trace context inject/extract)
opentelemetry = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
uuid = { workspace = true, features = ["v4"] }
tracing-subscriber = { workspace = true }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
serial_test = "3.2"
