[package]
name = "actrix-turn"
version.workspace = true
publish = false
edition.workspace = true
repository.workspace = true
description = "WebRTC TURN服务实现，作为aux-servers的组件"
license.workspace = true
rust-version.workspace = true

[dependencies]
turn_crate = { workspace = true }
webrtc-util = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
webrtc = { workspace = true }
md5 = "0.8"
twox-hash = "2.0"
hmac = { workspace = true }
sha1 = "0.10"

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
once_cell = "1.21.3"
base64 = { workspace = true }
lru = "0.12"

platform = { path = "../platform", package = "actrix-platform" }
actr-protocol = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
nonce-auth = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util"] }
serial_test = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[lib]
name = "turn"

[lints]
workspace = true
